cc/tests/fixtures/positive/18-pp-include-quote.c
#include "my_header.h"
int a = 3;
