cc/tests/fixtures/negative/07-pp-malformed-line.c
#line "file.c"
int bad2 = 0;
